--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "TheWitcherBestiaryDatabase": {
+    "ConnectionString": "mongodb+srv://guilherme:k20.c20xe-ap@thewitcherbestiary.i99qf.mongodb.net/TheWitcherBestiary?retryWrites=true&w=majority",
+    "DatabaseName": "TheWitcherBestiary",
+    "BestiaryCollectionName": "Bestiary"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
