--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "TheWitcherBestiaryDatabase": {
-    "ConnectionString": "mongodb+srv://guilherme:k20.c20xe-ap@thewitcherbestiary.i99qf.mongodb.net/TheWitcherBestiary?retryWrites=true&w=majority",
+    "ConnectionString": "Your connection string.",
     "DatabaseName": "TheWitcherBestiary",
     "BestiaryCollectionName": "Beast"
   },
