--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:16578",
-      "sslPort": 44387
+      "applicationUrl": "http://localhost:47124",
+      "sslPort": 44363
     }
   },
   "profiles": {
-    "TheWitcherBestiary": {
+    "BestiaryApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7137;http://localhost:5298",
+      "applicationUrl": "https://localhost:7052;http://localhost:5081",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
